refined overall portfolio

--- a/project1.html
+++ b/project1.html
@@ -61,7 +61,7 @@
     </header>
     <main>
       <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-      <div class="grid-bg">
+      <div class="grid-bg reverse">
           <div class="grid2">
           <!-- What is virtBox -->
           <section class ="whatIs">
