cleaned comments in files

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <!-- nav bar -->
-      <nav class="nav-bar"><!-- background -->
+      <nav class="nav-bar">
         <div>
           <a href="index.html"><img src="imagesUpdated/personalBrand.png" alt="personal logo"></a>
               <span class="open-slide">
@@ -102,11 +102,10 @@
 
           <li><p>So here I am, making a difference through design.</p></li>
 
-          <li class="lastImg"><img src="imagesUpdated/p3.png" alt="discover"></li> <!-- will edit size in css for responsiveness -->
-         </ul>
+          <li class="lastImg"><img src="imagesUpdated/p3.png" alt="discover"></li>
         </main>
         <footer> <!-- background -->
-            <section class="footer-content"> <!-- to center content later -->
+            <section class="footer-content">
               <div>Like what you see?</div>
               <div>Connect with me here!</div>
               <ul>
