--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <!-- nav bar -->
-    <nav class="nav-bar"><!-- background -->
+    <nav class="nav-bar">
       <div>
         <a href="index.html"><img src="imagesUpdated/personalBrand.png" alt="personal logo"></a>
             <span class="open-slide">
@@ -81,7 +81,7 @@
     </section>
   </main>
   <footer> <!-- background -->
-      <section class="footer-content"> <!-- to center content later -->
+      <section class="footer-content">
         <div>Like what you see?</div>
         <div>Connect with me here!</div>
         <ul>
