--- a/about.html
+++ b/about.html
@@ -134,5 +134,15 @@
             </section>
           </footer>
           <script src="js/portfolio.js"></script>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125811108-1"></script>
+          <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-125811108-1');
+          </script>
+
        </body>
      </html>
