edited project description

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          <li class="description-content">
              <h2>virtBox</h2>
               <p>virtBox is a cloud storage
-              provider for online learners created to simplified
+              provider for online learners created to simplify
               the process of storing and modifying files
               in an organized way.</p>
               <a class="button" href="project1.html">VIEW CASE STUDY</a>
