Added missing links in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div id="side-menu" class="side-nav">
           <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
           <a href="project1.html" class="portfolio">PROJECTS</a>
-          <a href="#">ABOUT</a>
+          <a href="about.html">ABOUT</a>
       </div>
     <!-- hero unit -->
     <section class="hero"> <!-- background -->
