fix most post assessment

--- a/project1.html
+++ b/project1.html
@@ -212,7 +212,7 @@
                     <li>Wireframes</li>
                     <li>Usability tests</li>
                     <li>Branding & Identity</li>
-                    <li>Logo sketches</li>
+                    <li>Logo process</li>
                     <li>Color & Style Guide</li>
                     <li>High fidelity mockup v1</li>
                   </ul>
@@ -336,7 +336,7 @@
                    After careful considerations of virtBox’s target audience and goals to help online learners, I decided it should be known for its organization.</p>
                    <ul>
                      <li>Google Drive: accessibility</li>
-                     <li>Dopbox: synchronization</li>
+                     <li>Dropbox: synchronization</li>
                      <li>box: collaboration</li>
                      <li>virtBox: organization</li>
                    </ul>
@@ -396,6 +396,9 @@
               <h6>Takeaways</h6>
                <p>Ultimately, all three interviewees are using Google Drive.
                   This proves how popular it is. Understanding the reason is vital for the development of virtBox.</p>
+                  <div class="link">
+                    <a href="https://www.figma.com/file/fuYkut8mprudUuFVwz5CXWQk/Cloud-storage-user-personas?node-id=9%3A2" target="_blank">VIEW DETAILED PERSONAS</a>
+                  </div>
              </section>
            <div class="grid-bg">
             <div class="grid2">
@@ -479,7 +482,7 @@
            <div class="grid-bg">
             <div class="grid2">
              <section class ="logoSketches">
-              <h3>LOGO SKETCHES</h3>
+              <h3>LOGO PROCESS</h3>
                 <p>The process started off with a brainstorming session played off of the mind-mapping/keywords that represent the goal of the product.
                    Then I narrowed down to the final five sketches.
                    These five sketches were further narrowed down to one logo to derive into more digitized versions.</p>
@@ -546,43 +549,42 @@
                    <h3>USER PREFERENCE TESTS</h3>
                     <p>I picked 3 elements that potentially need improvement
                         then created 2 versions for each element and conduct a preference test using <em class="bold">Usability Hub.</em></p>
-             <!-- will insert slide deck here. not sure how. bootstrap? -->
              </section>
            </div>
            <!-- display slideshow in mobile -->
              <section class="slideShow">
                 <ul class="slides">
-                  <li class="bold">Laid out navigation menu vs collapsed navigation menu</li>
+                  <h4>Laid out navigation menu vs collapsed navigation menu</h4>
                   <li>
                     <img src="imagesUpdated/menuPreferenceA.png" alt="Menu preference A">
                   </li>
                   <li>
                     <img src="imagesUpdated/menuPreferenceB.png" alt="Menu preference B">
-                    <h4>72% picked option B</h4>
+                    <h5>72% picked option B</h5>
                       <p>Since they were unable to view what entails under <em class="bold">“categories”</em>,
                        they  had concerns of having to scroll down if the <em class="bold">“categories”</em> option is expanded.
                        However, there were only 3 options under <em class="bold">“categories”</em>, which users will not have to worry about this concern.
                        Thus, I decided to implement option A for the next iteration.</p>
                   </li>
-                  <li class="bold">One button to add files vs 2 buttons to add files</li>
+                  <h4 class="top-g2">One button to add files vs 2 buttons to add files</h4>
                   <li>
                     <img src="imagesUpdated/addPreferenceA.png" alt="Add preference A">
                   </li>
-                  <li>
+                  <li class="bottom-g2">
                     <img src="imagesUpdated/addPreferenceB.png" alt="Add preference B">
-                    <h4>59% of users picked option B</h4>
+                    <h5>59% of users picked option B</h5>
                       <p>This test was the hardest. Both options started off very even. Some stated they like the simplicity while
                         others think it is less confusing to have 2 buttons. I decided to move on with option A to keep the interface clean
                         and to following the rule of progressive disclosure. If given more time, I would definitely perform more tests.
                         This is one of those situations were what designers think is best might not be what the users want.</p>
                   </li>
-                  <li class="bold">Icons vs non-icons</li>
+                  <h4>Icons vs non-icons</h4>
                   <li>
                     <img src="imagesUpdated/iconsPreferenceA.png" alt="Icons preference A">
                   </li>
                   <li>
                     <img src="imagesUpdated/iconsPreferenceB.png" alt="Icons preference B">
-                    <h4>100% users picked option B</h4>
+                    <h5>100% users picked option B</h5>
                       <p>Users stated the icons help them scan quickly through the navigation. I originally skipped the icons to keep things
                         simple and completely overlooked the important of icons. I decided to use option B to move forward.</p>
                   </li>
@@ -704,9 +706,17 @@
                   I enjoyed the visual design process, however, I had a hard time differentiating my product from the competitors.
                   The current market is saturated and I did not want to create another replication of what’s already on the market.
                   Competing with a strong competitor like Google Drive was tough. However, I learned to create the product specifically for a targeted audience
-                  based on the user survey results.This significantly helped me plan out my project. If given more time, I would do a preference test
-                  and usability test after every iteration. I would also perform the tests with more random participants instead of
-                  distributing them to mostly the design community. I feel that this cause the results to be skewed. </p>
+                  based on the user survey results. This significantly helped me plan out my project. </P>
+              <br>
+              <P>Another challenge I encountered was not being specific enough when creating the user survey.
+                  When analyzing the result, I realized asking vague questions led to vague answers. Because not
+                  all participants leave their contact information at the end, it was hard for follow-up and ask them
+                  to provide further explanation.</p>
+              <br>
+              <p>If given more time, I would do a preference test
+                 and usability test after every iteration.
+                  I would also perform the tests with more random participants instead of
+                  distributing them to mostly the design community. I feel that this caused the results to be skewed. </p>
            <div class="link">
              <a href="https://invis.io/4TGU1XQJ8UP" target="_blank">VIEW PROTOTYPE</a>
            </div>
