post portfolio assessment fix

--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
     <a name="jump">
     <!-- PROJECT 1 -->
     <section class="project1">
-       <ul class="grid2">
-         <li><img class="scr animated slideInUp" src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+      <ul class="grid2">
+        <li class="screen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
+        <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
          <li class="description-content">
              <h2>virtBox</h2>
               <p>virtBox is a cloud storage
