--- a/project1.html
+++ b/project1.html
@@ -45,7 +45,8 @@
       <!-- hero unit -->
       <section class="hero-background">
           <ul class="grid1">
-            <li><img class="left-content" src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+            <li class="left-content"><img src="imagesUpdated/mobileScr.png" alt="virtBox screenshot"></li>
+            <li class="left-contentBig"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
             <li class="right-content">
               <div class="summary">
                 <h1>Save</h1>
@@ -566,7 +567,7 @@
                        However, there were only 3 options under <em class="bold">“categories”</em>, which users will not have to worry about this concern.
                        Thus, I decided to implement option A for the next iteration.</p>
                   </li>
-                  <h4 class="top-g2">One button to add files vs 2 buttons to add files</h4>
+                  <div class="top-g2"><h4>One button to add files vs 2 buttons to add files</h4></div>
                   <li>
                     <img src="imagesUpdated/addPreferenceA.png" alt="Add preference A">
                   </li>
