post portfolio assessment fix: finalized

--- a/project1.html
+++ b/project1.html
@@ -398,7 +398,7 @@
                <p>Ultimately, all three interviewees are using Google Drive.
                   This proves how popular it is. Understanding the reason is vital for the development of virtBox.</p>
                   <div class="link">
-                    <a href="https://www.figma.com/file/fuYkut8mprudUuFVwz5CXWQk/Cloud-storage-user-personas?node-id=9%3A2" target="_blank">VIEW DETAILED PERSONAS</a>
+                    <a href="https://www.figma.com/file/fuYkut8mprudUuFVwz5CXWQk/Cloud-storage-user-personas?node-id=41%3A0" target="_blank">VIEW DETAILED PERSONAS</a>
                   </div>
              </section>
            <div class="grid-bg">
@@ -709,7 +709,7 @@
                   Competing with a strong competitor like Google Drive was tough. However, I learned to create the product specifically for a targeted audience
                   based on the user survey results. This significantly helped me plan out my project. </P>
               <br>
-              <P>Another challenge I encountered was not being specific enough when creating the user survey.
+              <P>Another challenge I encountered was not being specific enough when creating the user survey questions.
                   When analyzing the result, I realized asking vague questions led to vague answers. Because not
                   all participants leave their contact information at the end, it was hard for follow-up and ask them
                   to provide further explanation.</p>
