edit final fixes post portfolio assessment

--- a/about.html
+++ b/about.html
@@ -32,14 +32,16 @@
               <ul>
                 <li><a href="project1.html">PROJECTS</a></li>
                 <li><a href="about.html">ABOUT</a></li>
+                <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
               </ul>
         </div>
       </nav>
 
         <div id="side-menu" class="side-nav">
             <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-            <a href="project1.html" class="portfolio">PROJECTS</a>
-            <a href="about.html">ABOUT</a>
+            <li><a href="project1.html" class="portfolio">PROJECTS</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
         </div>
 
         <!-- hero unit -->
