--- a/project1.html
+++ b/project1.html
@@ -33,14 +33,16 @@
                 <ul>
                   <li><a href="project1.html">PROJECTS</a></li>
                   <li><a href="about.html">ABOUT</a></li>
+                  <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
                 </ul>
           </div>
         </nav>
 
           <div id="side-menu" class="side-nav">
               <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-              <a href="project1.html" class="portfolio">PROJECTS</a>
-              <a href="about.html">ABOUT</a>
+              <li><a href="project1.html" class="portfolio">PROJECTS</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
           </div>
       <!-- hero unit -->
       <section class="hero-background">
@@ -555,7 +557,7 @@
            <!-- display slideshow in mobile -->
              <section class="slideShow">
                 <ul class="slides">
-                  <h4>Laid out navigation menu vs collapsed navigation menu</h4>
+                  <li class="slides-bg"><h4>Laid out navigation menu vs collapsed navigation menu</h4></li>
                   <li>
                     <img src="imagesUpdated/menuPreferenceA.png" alt="Menu preference A">
                   </li>
@@ -567,7 +569,7 @@
                        However, there were only 3 options under <em class="bold">“categories”</em>, which users will not have to worry about this concern.
                        Thus, I decided to implement option A for the next iteration.</p>
                   </li>
-                  <div class="top-g2"><h4>One button to add files vs 2 buttons to add files</h4></div>
+                  <div class="top-g2"><li class="slides-bg"><h4>One button to add files vs 2 buttons to add files</h4></li></div>
                   <li>
                     <img src="imagesUpdated/addPreferenceA.png" alt="Add preference A">
                   </li>
@@ -579,7 +581,7 @@
                         and to following the rule of progressive disclosure. If given more time, I would definitely perform more tests.
                         This is one of those situations were what designers think is best might not be what the users want.</p>
                   </li>
-                  <h4>Icons vs non-icons</h4>
+                  <li class="slides-bg"><h4>Icons vs non-icons</h4></li>
                   <li>
                     <img src="imagesUpdated/iconsPreferenceA.png" alt="Icons preference A">
                   </li>
