--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
       <div id="side-menu" class="side-nav">
           <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-          <li><a href="project1.html" class="portfolio">PROJECTS</a></li>
-          <li><a href="about.html">ABOUT</a></li>
-          <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+          <a href="project1.html" class="portfolio">PROJECTS</a>
+          <a href="about.html">ABOUT</a>
+          <i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a>
       </div>
     <!-- hero unit -->
     <section class="hero"> <!-- background -->
