fixed index mobile

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <!-- nav bar -->
-    <nav class="nav-bar">
+    <nav class="nav-bar"><!-- background -->
       <div>
         <a href="index.html"><img src="imagesUpdated/personalBrand.png" alt="personal logo"></a>
             <span class="open-slide">
@@ -40,9 +40,9 @@
 
       <div id="side-menu" class="side-nav">
           <a href="#" class="btn-close" onclick="closeSlideMenu()">&times;</a>
-          <a href="project1.html" class="portfolio">PROJECTS</a>
-          <a href="about.html">ABOUT</a>
-          <i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a>
+          <li><a href="project1.html" class="portfolio">PROJECTS</a></li>
+          <li><a href="about.html">ABOUT</a></li>
+          <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
       </div>
     <!-- hero unit -->
     <section class="hero"> <!-- background -->
