Load background for project2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
   <!-- Font awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
@@ -66,21 +67,36 @@
   </header>
   <main class="container">
     <a name="jump">
-    <!-- PROJECT 1 -->
-    <section class="project1">
-      <ul class="grid2">
-        <li class="screen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
-        <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
-         <li class="description-content">
-             <h2>virtBox</h2>
-              <p>virtBox is a cloud storage
-              provider for online learners created to simplify
-              the process of storing and modifying files
-              in an organized way.</p>
-              <a class="button" href="project1.html">VIEW CASE STUDY</a>
-         </li>
-      </ul>
-    </section>
+      <!-- PROJECT 2 -->
+      <section class="project2">
+        <ul class="grid3">
+          <li class="description-content">
+            <h2>TNRHumane</h2>
+            <p>virtBox is a cloud storage
+            provider for online learners created to simplify
+            the process of storing and modifying files
+            in an organized way.</p>
+          </li>
+          <li class="screen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
+          <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+
+        </ul>
+      </section>
+      <!-- PROJECT 1 -->
+      <section class="project1">
+        <ul class="grid2">
+          <li class="screen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
+          <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+           <li class="description-content">
+               <h2>virtBox</h2>
+                <p>virtBox is a cloud storage
+                provider for online learners created to simplify
+                the process of storing and modifying files
+                in an organized way.</p>
+                <a class="button" href="project1.html">VIEW CASE STUDY</a>
+           </li>
+        </ul>
+      </section>
   </main>
   <footer> <!-- background -->
       <section class="footer-content">
