--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <ul>
               <li><a href="project1.html">PROJECTS</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/resume.pdf" target="_blank">RESUME</a></li>
+              <li><i class="far fa-file-pdf"></i><a href="imagesUpdated/Resume.pdf" target="_blank">RESUME</a></li>
             </ul>
       </div>
     </nav>
