edit project 2 description

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
       <ul class="grid3">
         <li class="description-content">
           <h2>TNRHumane</h2>
-          <p>A mobile application that help humanely reduce homeless cat overpopulation
-            by allowing users to report homeless cat sighting, get them
-            fixed/vaccinated/medical attention,
-            and return them to the environment to live their lives.
+          <p>A mobile application that partner with animal welfare organizations and volunteers
+            to help humanely reduce homeless cat overpopulation
+            through Trap, Neuter, Return program and find home for friendly strays.
             </p>
             <a class="button" href="project2.html">VIEW CASE STUDY</a>
         </li>
