fix jumping issue

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
           </div>
 
         <div class="down-arrow">
-          <a href="#jump"><i class="fas fa-angle-down fa-3x"></i></a>
+          <a href="#projects"><i class="fas fa-angle-down fa-3x"></i></a>
         </div>
       </div>
     </section>
   </header>
   <main class="container">
     <!-- PROJECT 2 -->
-    <section class="project2">
+    <section id="projects" class="project2">
       <ul class="grid3">
         <li class="description-content">
           <h2>TNRHumane</h2>
