edit margin for description-content classes

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- PROJECT 2 -->
     <section id="projects" class="project2">
       <ul class="grid3">
-        <li class="description-content">
+        <li class="description-content2">
           <h2>TNRHumane</h2>
           <p>A mobile application that partner with animal welfare organizations and volunteers
             to help humanely reduce homeless cat overpopulation
@@ -85,7 +85,7 @@
         <ul class="grid2">
           <li class="screen"><img src="imagesUpdated/mobileScr.png" alt="virtbox screenshot"></li>
           <li class="bigScreen"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
-          <li class="description-content">
+          <li class="description-content1">
             <h2>virtBox</h2>
               <p>A cloud storage
                 provider for online learners created to simplify
