edit homepage project1 color

--- a/project2.html
+++ b/project2.html
@@ -6,6 +6,7 @@
   <title>Portfolio | Tristine Nguyen</title>
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/virtbox.css">
+  <link rel="stylesheet" href="styles/TNRHumane.css">
   <link rel="stylesheet" href="styles/w3.css">
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet'>
@@ -51,11 +52,11 @@
             <li class="left-contentBig"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
             <li class="right-content">
               <div class="summary">
-                <h1>Save</h1>
-                <h1>Upload</h1>
-                <h1>Collaborate</h1>
-                <h1>Share</h1>
-                <h1>With virtBox</h1>
+                <h1>Trap</h1>
+                <h1>Neuter/Spay</h1>
+                <h1>Vaccinate</h1>
+                <h1>Return</h1>
+                <h1>With care and love for homeless cats</h1>
               </div>
                 <a class="button" href="https://invis.io/4TGU1XQJ8UP" target="_blank">VIEW PROTOTYPE</a>
             </li>
@@ -68,10 +69,13 @@
           <div class="grid2">
           <!-- What is virtBox -->
           <section class ="whatIs">
-            <h2>What is virtBox?</h2>
-            <p>virtBox is a cloud storage provider for online learners.
-              The goal of virtBox is to increase productivity with an organized and
-              clean user interface while streamlining the user flow process for saving contents online. </p>
+            <h2>What is TNRHumane?</h2>
+            <p>TNRHumane is a mobile application that allows users to report homeless cat sighting
+              and alert volunteers or animal organizations to come and Trap, Neuter, and Return feral cats
+              to its environment. The app will also help find homes for abandoned animals,
+              provide food/medical care, and act as a humane solution to reduce feral cats overpopulation.
+              Besides helping homeless cats, TNRHumane acts as a social platform for local caretakers
+              and animal advocates to connect.</p>
               <div class="rolesTools">
                 <ul class="roles">
                  <li class="title1">Design Roles</li>
@@ -86,6 +90,7 @@
                  <li>Usability Hub</li>
                  <li>Balsamiq</li>
                  <li>Draw.io</li>
+                 <li>Maze</li>
               </ul>
              </div>
             </section>
@@ -95,9 +100,12 @@
            <!-- OVERVIEW -->
            <section class ="overview">
             <h2>OVERVIEW</h2>
-            <p>There are many strong competitors in the market such as
-                  Google Drive, Box, and Dropbox, but there is still room for the right combination
-                  of features to meet our audience needs. Here are some problems identified:</p>
+            <p>Homeless cats multiply quickly in the wild.
+              A pair of unfixed cat can multiply up to ….. Within a year. By 3 years,
+              there will be a colony of approximately ….. While many often feed them while others
+              see them as a nuisance. Thus, creating problems such as, animosity towards homeless cats and feeders,
+              human-transmitted diseases, Risk of animal abuse, kittens born suffer and die in the wild.
+              In order to ensure animal welcare, the community is facing the following problems:</p>
               </section>
            </div>
            <!-- problem and solution group 1 -->
@@ -107,13 +115,13 @@
                    <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                  </li>
                  <li class="prob">
-                   <em class="bold-prob">Problem:</em> Many cloud storage providers lack UI simplicity
+                   <em class="bold-prob">Problem:</em> Unable to keep track of homeless cat population and their welcare
                  </li>
                  <li>
                     <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                  </li>
                  <li class="prob">
-                   <em class="bold-sol">Solution:</em> Clean user interface for simplicity
+                   <em class="bold-sol">Solution:</em> Allow both those who dislike cats and animal advocate to report homeless cats sighting
                  </li>
                </ul>
                <img class="solscr" src="imagesUpdated/logedInDashboard.png" alt="empty dashboard">
@@ -126,13 +134,13 @@
                       <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                     </li>
                     <li class="prob">
-                      <em class="bold-prob">Problem:</em> Difficult to locate file types and  little support to save links
+                      <em class="bold-prob">Problem:</em> Unable to increase a community to support TNR program
                     </li>
                     <li>
                        <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                     </li>
                     <li class="prob">
-                      <em class="bold-sol">Solution:</em> Organized file types with support to save links
+                      <em class="bold-sol">Solution:</em> Homeless cats get fixed, returned, and recorded
                     </li>
                  </ul>
                  <img class="solscr sm" src="imagesUpdated/dashboardLink.png" alt="dashboard link view">
@@ -145,13 +153,13 @@
                  <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                </li>
                <li class="prob">
-                 <em class="bold-prob">Problem:</em> Difficult to locate file types and  little support to save links
+                 <em class="bold-prob">Problem:</em> Unable to increase a community to support TNR program
                </li>
                <li>
                   <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                </li>
                <li class="prob">
-                 <em class="bold-sol">Solution:</em> Organized file types with support to save links
+                 <em class="bold-sol">Solution:</em> Homeless cats get fixed, returned, and recorded
                 </li>
              </ul>
            <!-- problem and solution group 3 -->
@@ -160,14 +168,13 @@
                    <img class="sad" src="imagesUpdated/iconsLogos/frown.svg" alt="sad face">
                  </li>
                  <li class="prob">
-                   <em class="bold-prob">Problem:</em> Little support for real-time collaboration
+                   <em class="bold-prob">Problem:</em> Educate the community of homeless cats overpopulation
                  </li>
                  <li>
                     <img class="happy" src="imagesUpdated/iconsLogos/smile.svg" alt="happy face">
                  </li>
                  <li class="prob">
-                   <em class="bold-sol">Solution:</em> In-house messaging system and identification
-                  </li>
+                   <em class="bold-sol">Solution:</em> Volunteer community to support kittens
                </ul>
                <img class="solscr" src="imagesUpdated/realTimeSupport.png" alt="dashboard in house massaging system screenshot">
 
@@ -244,11 +251,11 @@
                <hr>
                 <h2>PHASE 1: DISCOVERY & RESEARCH</h2>
                  <h3>USER SURVEY</h3>
-                  <p>I started the process with a survey to get to know the users and competitors.
-                          I wanted to know what kind of information they save, how often,
-                          what devices they use to perform these tasks, and specifically, the most important features they use.
-                          The goal is to understand what makes them prefer a specific competitor?</p>
-                   <p class="break">Here are the results that shaped the foundation of virtBox:</p>
+                  <p>I created a survey to get to know the users and competitors.
+                    I wanted to know how they react when they come across a stray cat, how often,
+                    are they aware of services provided to help these cats, how they can benefit from helping, etc.
+                    </p>
+                   <p class="break">Here are the results that shaped the foundation of TNRHumane: </p>
                     <div class="data">
                      <ul>
                        <li>
@@ -313,23 +320,34 @@
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/GDrive.png" alt="Google Drive logo">
                    </div>
-                    <p>Google Drive is the most popular due to its accessibility.
-                       There are sub-environments for each file types which can be accessed anywhere and share with anyone in real-time collaboration.</p>
+                    <p>Pawpular is a social media platform for pet owners to share photos of their pets such as
+                      dogs, cats, reptiles, birds, aquatic animals, mammals, etc.
+                      The platform UI is very similar to Facebook and Instagram.
+                      Pawpular has its own growing community in the dogs and cats categories,
+                      but none in other categories. Moreover, its content needs more organizations by
+                      eliminating unpopular features and services that have not been out yet.</p>
                  </article>
                  <article>       <!-- DROPBOX -->
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/dropbox.png" alt="Google Drive logo">
                    </div>
-                    <p>Dropbox is another strong competitor. Their dashboard navigation changes based on what the users clicked.
-                              This caused confusion. It is a platform known for syncing files from multiple devices rather than for creating new contents.</p>
+                    <p>StrayGlobe is a one-of-its-kind mobile app that let user report stray animals.
+                      The app was developed in India and their map works worldwide.
+                      It has no support for interactivity between users and volunteers.
+                      Because the app works worldwide, the chances for someone in the U.S to use it to
+                      report a stray animal and actually have someone who knows about StrayGlobe to come help is
+                      extremely low.
+                      Thus, it is a very ineffective application.</p>
                  </article>
                  <article>       <!-- BOX -->
                    <div class="logo-container">
                      <img src="imagesUpdated/iconsLogos/boxLogo.png" alt="Google Drive logo">
                    </div>
-                    <p>Box, although not as popular, it has the fastest growing speed in the market.
-                       It targets businesses and corporates.
-                       Box is known for its collaboration features and its support for MS Office (which is highly desired based on the survey results).</p>
+                    <p>ASPCA is one of the few animal welfare organizations that developed a mobile app.
+                      ASPCA’s goal is to inform pet owners how to prepare for disasters.
+                      They also encourage users to take actions by donating or sign petitions for animal rights.
+                      Other services include storing pet’s health record
+                      and social feed where they post updates about their events, announcements, and status. </p>
                  </article>
                </div>
              </section>
