add project 2 header background

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
       <ul class="grid3">
         <li class="description-content2">
           <h2>TNRHumane</h2>
-          <p>A mobile application that partner with animal welfare organizations and volunteers
-            to help humanely reduce homeless cat overpopulation
-            through Trap, Neuter, Return program and find home for friendly strays.
+          <p>A mobile application that partner with animal welfare organizations and volunteers to help
+            humanely reduce homeless cats overpopulation through Trap, Neuter, Return program 
+            and find homes for friendly strays.
             </p>
             <a class="button" href="project2.html">VIEW CASE STUDY</a>
         </li>
