--- a/project1.html
+++ b/project1.html
@@ -47,8 +47,8 @@
       <!-- hero unit -->
       <section class="hero-background">
           <ul class="grid1">
-            <li class="left-content"><img src="imagesUpdated/mobileScr.png" alt="virtBox screenshot"></li>
-            <li class="left-contentBig"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
+            <li class="left-content"><img src="imagesUpdated/virtbox.png" alt="cat screenshot"></li>
+            <li class="left-contentBig"><img src="imagesUpdated/virtbox.png" alt="cat screenshot"></li>
             <li class="right-content">
               <div class="summary">
                 <h1>Save</h1>
