--- a/project2.html
+++ b/project2.html
@@ -52,11 +52,10 @@
             <li class="left-contentBig"><img src="imagesUpdated/virtbox.png" alt="virtBox screenshot"></li>
             <li class="right-content">
               <div class="summary">
-                <h1>Trap</h1>
-                <h1>Neuter/Spay</h1>
-                <h1>Vaccinate</h1>
-                <h1>Return</h1>
-                <h1>With care and love for homeless cats</h1>
+                <h1><em class="abbreviation">T</em>rap</h1>
+                <h1><em class="abbreviation">N</em>euter/Spay</h1>
+                <h1><em class="abbreviation">R</em>eturn</h1>
+                <h1>With love for homeless cats</h1>
               </div>
                 <a class="button" href="https://invis.io/4TGU1XQJ8UP" target="_blank">VIEW PROTOTYPE</a>
             </li>
@@ -352,15 +351,6 @@
                </div>
              </section>
              <section class="takeaway1">
-              <h6>What can I do with this information?</h6>
-                <p>Google Drive, Dropbox, and Box all known for a specific feature. So I thought, “What should virtBox be known for?”.
-                   After careful considerations of virtBox’s target audience and goals to help online learners, I decided it should be known for its organization.</p>
-                   <ul>
-                     <li>Google Drive: accessibility</li>
-                     <li>Dropbox: synchronization</li>
-                     <li>box: collaboration</li>
-                     <li>virtBox: organization</li>
-                   </ul>
                   <p>Sounds about right.</p>
                 <div class="link">
                   <a href="https://docs.google.com/document/d/1g9imbsTdDA3NKcgQYV9RdWiU63zimhgT3TPJGdQUw5M/edit?usp=sharing" target="_blank">VIEW DETAILED ANALYSIS</a>
